karnc/tests/fixtures/positive/169_cross_ctx_cap_in_provider/src/ops/metrics.karn
context ops.metrics

consumes platform.time

capability Stamp {
  fn make() -> Effect[Int]
}

provides Stamp = ClockStamp given platform.time.Clock {
  fn make() -> Effect[Int] {
    let t <- platform.time.Clock.now()
    t
  }
}

service report {
  on call() -> Effect[Int] given Stamp {
    let s <- Stamp.make()
    s
  }
}
