karnc/tests/fixtures/negative/131_given_cross_ctx_unknown/src/platform/clk.karn
context platform.clk

capability Clock {
  fn now() -> Effect[Int]
}

provides Clock = SystemClock {
  fn now() -> Effect[Int] {
    0
  }
}
